Imager/PDL tasks use 5.32.1

--- a/P/Plasma_effect.1
+++ b/P/Plasma_effect.1
@@ -1,4 +1,4 @@
-#!/usr/local/bin/perl
+#!/usr/local/bin/perl5.32.1
 #n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Plasma_effect
 #c# 2018-11-05 >RC
