add prominent warning to obsolete versions

--- a/A/Approximate_Equality.1
+++ b/A/Approximate_Equality.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #t# skiptest
 #u# http://rosettacode.org/wiki/Approximate_Equality
 #p# OK
