--- a/C/Closest-pair_problem.1
+++ b/C/Closest-pair_problem.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Closest-pair_problem
 #c# 2018-07-23 <>RC
 #p# OK
