--- a/K/Kronecker_product.1
+++ b/K/Kronecker_product.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl5.32.1
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Kronecker_product
 #c# 2018-08-14 <RC
 #p# OK
