--- a/N/N-queens_minimum_and_knights_and_bishops.1
+++ b/N/N-queens_minimum_and_knights_and_bishops.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl5.32.1
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/N-queens_minimum_and_knights_and_bishops
 #c# 2022-07-11 >RC
 #p# OK
