--- a/P/Polynomial_regression.1
+++ b/P/Polynomial_regression.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Polynomial_regression
 #c# 2018-08-20 <RC, 2019-02-09 >RC
 #p# OK
