--- a/S/Statistics_Chi-squared_distribution.1
+++ b/S/Statistics_Chi-squared_distribution.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# https://rosettacode.org/wiki/Statistics_Chi-squared_distribution
 #c# 2022-12-03 >RC
 #p# OK
