--- a/T/Triplet_of_three_numbers.1
+++ b/T/Triplet_of_three_numbers.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Triplet_of_three_numbers
 #c# 2021-05-20 <RC
 #p# OK
