--- a/0/15_puzzle_solver.1
+++ b/0/15_puzzle_solver.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/15_puzzle_solver
 #c# 2021-06-27 NOT ON RC
 #p# OK
