--- a/A/Almkvist-Giullera_formula_for_pi.1
+++ b/A/Almkvist-Giullera_formula_for_pi.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Almkvist-Giullera_formula_for_pi
 #c# 2021-01-12 >RC
 #p# OK
