--- a/C/Character_codes.1
+++ b/C/Character_codes.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Character_codes
 #c# 2018-07-22 <RC
 #p# OK
