--- a/F/Functional_coverage_tree.1
+++ b/F/Functional_coverage_tree.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Functional_coverage_tree
 #c# 2019-10-10 <RC
 #p# OK
