--- a/I/Identity_matrix.1
+++ b/I/Identity_matrix.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Identity_matrix
 #c# 2018-08-13 <RC
 #p# OK
