--- a/L/Length_of_an_arc_between_two_angles.1
+++ b/L/Length_of_an_arc_between_two_angles.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Length_of_an_arc_between_two_angles
 #c# 2020-03-16 NOT ON RC
 #p# OK
