--- a/N/Names_to_numbers.1
+++ b/N/Names_to_numbers.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Names_to_numbers
 #c# 2018-08-19 <RC
 #p# OK
