--- a/N/Numbers_which_are_not_the_sum_of_distinct_squares.1
+++ b/N/Numbers_which_are_not_the_sum_of_distinct_squares.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Numbers_which_are_not_the_sum_of_distinct_squares
 #c# 2022-07-13 NOT ON RC
 #p# OK
