--- a/P/P-value_correction.1
+++ b/P/P-value_correction.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/P-value_correction
 #c# 2018-08-20 <RC, 2018-12-20 <RC,
 #p# OK
