--- a/P/Peaceful_chess_queen_armies.1
+++ b/P/Peaceful_chess_queen_armies.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Peaceful_chess_queen_armies
 #c# 2019-04-02 <RC
 #p# OK
