--- a/P/Perfect_shuffle.1
+++ b/P/Perfect_shuffle.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Perfect_shuffle
 #c# 2018-08-21 <RC
 #p# OK
