--- a/P/Prime_triplets.1
+++ b/P/Prime_triplets.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Prime_triplets
 #c# 2021-04-22 <RC
 #p# OK
