--- a/P/Primes_with_digits_in_nondecreasing_order.1
+++ b/P/Primes_with_digits_in_nondecreasing_order.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Primes_with_digits_in_nondecreasing_order
 #c# 2021-04-23 <RC
 #p# OK
