--- a/S/Sorting_algorithms_Cocktail_sort.1
+++ b/S/Sorting_algorithms_Cocktail_sort.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Sorting_algorithms/Cocktail_sort
 #c# 2018-08-15 <RC
 #p# OK
