--- a/S/Successive_prime_differences.1
+++ b/S/Successive_prime_differences.1
@@ -1,4 +1,5 @@
 #!/usr/local/bin/perl
+#n# NOT CURRENT, NOT SMOKE-TESTED
 #u# http://rosettacode.org/wiki/Successive_prime_differences
 #c# 2019-04-29 >RC, 2021-01-30
 #p# OK
