--- a/Z/Zeckendorf_arithmetic.1
+++ b/Z/Zeckendorf_arithmetic.1
@@ -1,95 +1,13 @@
 #!/usr/local/bin/perl
 #u# http://rosettacode.org/wiki/Zeckendorf_arithmetic
-#c# 2023-03-28 NOT ON RC
+#c# 2021-11-26 <RC
 #p# OK
-#n# 'upgrade' to 5.36 not complete, runs but code not quite there yet
 
 my @res;
 
-use v5.36.0;
-
-package Zeckendorf;
-use overload qw("" zstring + zadd - zsub ++ zinc -- zdec * zmul / zdiv ge zge);
-
-sub new ($class, $value) {
-  bless \$value, ref $class || $class;
-}
-
-sub zinc ($self, $, $) {
-  local $_ = $$self;
-  s/0$/1/ or s/(?:^|0)1$/10/;
-  1 while s/(?:^|0)11/100/;
-  $$self = $self->new( s/^0+\B//r );
-}
-
-# not working
-sub zdec_xxx ($self, $, $) {
-  local $_ = $$self;
-  1 while s/100(?=0*$)/011/;
-  s/1$/0/ or s/10$/01/;
-#$DB::single = 1;
-  $$self = $self->new( s/^0+\B//r ); # cannot work around this
-}
-
-# still using old version
-sub zdec {
-  my ($self, $other) = @_;
-  local $_ = $$self;
-  1 while s/100(?=0*$)/011/;
-  s/1$/0/ or s/10$/01/;
-  $_[0] = $self->new( s/^0+\B//r );
-}
-
-sub zadd ($self, $other, $) {
-  my ($x, $y) = map $self->new($$_), $self, $other; # copy
-  $x++, $y-- while $$y; # ne 0;
-  $x
-}
-
-sub zsub ($self, $other, $) {
-  my ($x, $y) = map $self->new($$_), $self, $other; # copy
-  $x--, $y-- while $$y; # ne 0;
-  $x
-}
-
-sub zmul ($self, $other, $) {
-  my ($x, $y) = map $self->new($$_), $self, $other; # copy
-  my $product = Zeckendorf->new(0);
-  $product = $product + $x, --$y while "$y"; # ne 0;
-  $product
-}
-
-sub zdiv ($self, $other, $) {
-  my ($x, $y) = map $self->new($$_), $self, $other; # copy
-  my $quotient = Zeckendorf->new(0);
-  $quotient++, $x = $x - $y while $x ge $y;
-  $quotient
-}
-
-sub zge ($self, $other, $) {
-  my $l = length( $$self | $$other );
-  0 x ($l - length $$self) . $$self ge 0 x ($l - length $$other) . $$other;
-}
-
-sub asdecimal ($self) {
-  my $n = 0;
-  my $aa = my $bb = 1;
-  for ( reverse split //, $$self ) {
-    $n += $bb * $_;
-    ($aa, $bb) = ($bb, $aa + $bb);
-  }
-  $n;
-}
-
-sub fromdecimal ($self, $value) {
-  my $z = $self->new(0);
-  ++$z for 1 .. $value;
-  $z;
-}
-
-sub zstring { ${ shift() } }
-
-package main;
+use strict;
+use warnings;
+use feature 'say';
 
 for ( split /\n/, <<END ) # test cases
   1 + 1
@@ -115,6 +33,97 @@ END
   push @res, sprintf "%12s %s %-9s => %12s  in Zeckendorf", $x, $op, $y, $answer;
   push @res, sprintf "%12d %s %-9d => %12d  in decimal\n",
     $x->asdecimal, $op, $y->asdecimal, $answer->asdecimal;
+  }
+
+package Zeckendorf;
+use overload qw("" zstring + zadd - zsub ++ zinc -- zdec * zmul / zdiv ge zge);
+
+sub new
+  {
+  my ($class, $value) = @_;
+  bless \$value, ref $class || $class;
+  }
+
+sub zinc
+  {
+  my ($self, $other, $swap) = @_;
+  local $_ = $$self;
+  s/0$/1/ or s/(?:^|0)1$/10/;
+  1 while s/(?:^|0)11/100/;
+  $_[0] = $self->new( s/^0+\B//r );
+  }
+
+sub zdec
+  {
+  my ($self, $other, $swap) = @_;
+  local $_ = $$self;
+  1 while s/100(?=0*$)/011/;
+  s/1$/0/ or s/10$/01/;
+  $_[0] = $self->new( s/^0+\B//r );
+  }
+
+sub zstring { ${ shift() } }
+
+sub zadd
+  {
+  my ($self, $other, $swap) = @_;
+  my ($x, $y) = map $self->new($$_), $self, $other; # copy
+  $x++, $y-- while $$y ne 0;
+  return $x;
+  }
+
+sub zsub
+  {
+  my ($self, $other, $swap) = @_;
+  my ($x, $y) = map $self->new($$_), $self, $other; # copy
+  $x--, $y-- while $$y ne 0;
+  return $x;
+  }
+
+sub zmul
+  {
+  my ($self, $other, $swap) = @_;
+  my ($x, $y) = map $self->new($$_), $self, $other; # copy
+  my $product = Zeckendorf->new(0);
+  $product = $product + $x, --$y while "$y" ne 0;
+  return $product;
+  }
+
+sub zdiv
+  {
+  my ($self, $other, $swap) = @_;
+  my ($x, $y) = map $self->new($$_), $self, $other; # copy
+  my $quotient = Zeckendorf->new(0);
+  ++$quotient, $x = $x - $y while $x ge $y;
+  return $quotient;
+  }
+
+sub zge
+  {
+  my ($self, $other, $swap) = @_;
+  my $l = length( $$self | $$other );
+  0 x ($l - length $$self) . $$self ge 0 x ($l - length $$other) . $$other;
+  }
+
+sub asdecimal
+  {
+  my ($self) = @_;
+  my $n = 0;
+  my $aa = my $bb = 1;
+  for ( reverse split //, $$self )
+    {
+    $n += $bb * $_;
+    ($aa, $bb) = ($bb, $aa + $bb);
+    }
+  return $n;
+  }
+
+sub fromdecimal
+  {
+  my ($self, $value) = @_;
+  my $z = $self->new(0);
+  ++$z for 1 .. $value;
+  return $z;
   }
 
 say my $result = join "\n", @res;
