--- a/Z/Zeckendorf_arithmetic.1
+++ b/Z/Zeckendorf_arithmetic.1
@@ -9,7 +9,7 @@ use strict;
 use warnings;
 use feature 'say';
 
-for ( split /\n/, <<END ) # test cases
+for ( split /\n/, <<'END' ) # test cases
   1 + 1
   10 + 10
   10100 + 1010
